--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
 
   # File Handling
   file_picker:
+  intl: ^0.20.2
 
   # For uploading media (Multipart)
   # You can use dio itself, or for Firebase-based approach:
