--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # File Handling
   file_picker:
   intl: ^0.20.2
+  equatable: ^2.0.7
+  image_picker: ^1.1.2
 
   # For uploading media (Multipart)
   # You can use dio itself, or for Firebase-based approach:
