--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   intl: ^0.20.2
   equatable: ^2.0.7
   image_picker: ^1.1.2
+  intl_phone_field: ^3.2.0
 
   # For uploading media (Multipart)
   # You can use dio itself, or for Firebase-based approach:
